--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "twc": "npx tailwindcss -i ./src/input.css -o ./src/output.css",
-    "tww": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch"
+    "twc": "npx tailwindcss -i ./src/assets/tailwind.css -o ./src/assets/tailwindOut.css",
+    "tww": "npx tailwindcss -i ./src/assets/tailwind.css -o ./src/assets/tailwindOut.css --watch"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -23,6 +23,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "daisyui": "^4.12.20",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "tailwindcss": "^3.4.16"
