--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tww": "npx tailwindcss -i ./src/assets/tailwind.css -o ./src/assets/tailwindOut.css --watch"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
